Hotfix: Fixed spacing issues on home splash page

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -31,9 +31,10 @@ body {
 
   height: 100%;
   width: 100%;
-  padding-top: 150px;
+  padding-top: 90px;
   padding-left: 5vw;
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 110%);
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(19,19,19,.5) 90%, rgba(19,19,19,1) 100%),
+              linear-gradient(to left, rgba(0,0,0,0) 0%, rgba(0,0,0,.95) 80%);
 }
 
 .hero_title {
@@ -91,7 +92,7 @@ body {
 }
 
 .hero_description {
-  width: 33%;
+  width: 35%;
   color: #fff ;
   font-weight: 400;
   line-height: 1.35;
